@@ -133,6 +133,7 @@ v 8.12.0 (unreleased)
   - Deleting source project with existing fork link will close all related merge requests !6177 (Katarzyna Kobierska Ula Budziszeska)
   - Return 204 instead of 404 for /ci/api/v1/builds/register.json if no builds are scheduled for a runner !6225
   - Fix Gitlab::Popen.popen thread-safety issue
+  - Add specs to removing project (Katarzyna Kobierska Ula Budziszewska)
 
 v 8.11.6 (unreleased)
   - Fix an error where we were unable to create a CommitStatus for running state
